# Numerical-solving-of-partial-differential-equations

./: .gitignore  CMakeLists.txt  Makefile
src/: CMakeLists.txt  DDoubleLoopIterator.h  DoubleLoopIterator.h  Presets.h
src/Charts/: CMakeLists.txt
src/Charts/2Dbase/: CMakeLists.txt  main.cpp
src/EllipticEquations/: CMakeLists.txt  SchemeElliptic.h  SetupElliptic.h
src/EllipticEquations/EllipticErrors/: CMakeLists.txt  main.cpp
src/EllipticEquations/main/: CMakeLists.txt
src/EllipticEquationsDirichlet/: SchemeElliptic.h  SetupElliptic.h
src/EllipticEquationsDirichlet/main/: CMakeLists.txt  main.cpp
src/Hyperbolic/: SchemeHyperbolic.h  SetupHyperbolic.h
src/Hyperbolic/main/: CMakeLists.txt  main.cpp
src/NRRRC_project/: CMakeLists.txt  main.cpp
src/ParabolicEquations/: SchemeParabolic.h  SetupParabolic.h
src/ParabolicEquations/main/: CMakeLists.txt  main.cpp
